# CHLang

./: .gitignore  README.md  build.py  gen.bat  make.py  pkg.py  re_name_project.py  run_tests.py  svg2png.py  temp.py  temp.txt  temp2.txt  temp3.txt
debug/: debug.cpp  debug.h  test_manual_dynamic.cpp
examples/: full_demo.ch  gdiplus_demo.ch  gdiplus_demo.cpp  test_separation.h.ch
examples/GdiDemo/: CMakeLists.txt  config.json
examples/GdiDemo/src/: main.cpp.ch
examples/MyGdiApp/: CMakeLists.txt  config.json  layout.json  project.json
examples/MyGdiApp/include/: LayoutLoader.h.ch  MyWindow.h.ch
examples/MyGdiApp/src/: Application.ch  Application.h.ch  Button.ch  Button.cpp.ch  Button.h.ch  Events.cpp.ch  Geometry.cpp.ch  Geometry.h.ch  Label.cpp.ch  Label.h.ch  LayoutLoader.cpp.ch  MyWindow.ch  MyWindow.cpp.ch  MyWindow.h.ch  PropertyInjector.cpp.ch  PropertyInjector.h.ch  Reflection.cpp.ch  Reflection.h.ch  UIFactory.cpp.ch  Widget.ch  Widget.cpp.ch  Widget.h.ch  WinMain.ch  WinMain.cpp.ch  WinMain.h.ch  Window.ch  Window.cpp.ch  Window.h.ch  app.ch  app.cpp.ch  main.cpp.ch
examples/project/: app.ch
grammar/: ChronoLexer.g4  ChronoParser.g4
libs/chui/: CMakeLists.txt  config.json
libs/chui/include/chui/: Application.h.ch  Base64.h.ch  Button.h.ch  Events.h.ch  Geometry.h.ch  HBox.h.ch  ImageView.h.ch  Label.h.ch  Menu.h.ch  MyWindow.h.ch  PropertyInjector.h.ch  UIFactory.h.ch  Widget.h.ch  WinMain.h.ch  Window.h.ch
libs/chui/src/: Application.cpp.ch  Button.cpp.ch  Events.cpp.ch  Geometry.cpp.ch  HBox.cpp.ch  ImageView.cpp.ch  Label.cpp.ch  Menu.cpp.ch  MyWindow.cpp.ch  PropertyInjector.cpp.ch  Reflection.cpp.ch  UIFactory.cpp.ch  Widget.cpp.ch  WinMain.cpp.ch  Window.cpp.ch
libs/chui/test/: test_main.ch
libs/jsonp/: CMakeLists.txt  config.json
libs/jsonp/include/jsonp/: Json.h.ch  JsonParser.h.ch
libs/jsonp/src/: Json.cpp.ch  JsonParser.cpp.ch
libs/jsonp/test/: test_main.ch  test_parser.ch
runtime/: CH.h  CHInt.h  CHObject.h  CHSelector.h  CHString.cpp  CHString.h  Chrono.h  ChronoInt.h  ChronoObject.h  ChronoSelector.h  ChronoString.cpp  ChronoString.h  Reflection.h  TypeConverters.h
src/: CHVisitor.py  ChronoVisitor.py  CompileContext.py  TypemapScanner.py  transpiler.py
src/generators/: Base.py  PropertyInjector.py
src/parser/: CHLexer.g4  CHLexer.py  CHParser.g4  CHParser.py  CHParserListener.py  CHParserVisitor.py  ChronoLexer.g4  ChronoLexer.interp  ChronoLexer.py  ChronoLexer.tokens  ChronoParser.g4  ChronoParser.interp  ChronoParser.py  ChronoParser.tokens  ChronoParserListener.py  ChronoParserVisitor.py
test/: test_access_control.ch  test_access_control.expected.txt  test_arithmetic_ops.ch  test_arithmetic_ops.expected.txt  test_array_features.ch  test_array_features.expected.txt  test_arrays.ch  test_arrays.expected.txt  test_as_cast.ch  test_as_cast.expected.txt  test_basic.ch  test_bitwise_ops.ch  test_bitwise_ops.expected.txt  test_borrow_check.ch  test_borrow_check.expected.txt  test_chaining.ch  test_chaining.expected.txt  test_chrono_log.ch  test_chrono_log.expected.txt  test_class_members.ch  test_class_members.expected.txt  test_class_memory.ch  test_class_memory.expected.txt  test_closure.ch  test_closure.expected.txt  test_codegen.ch  test_codegen.expected.txt  test_comparison_ops.ch  test_comparison_ops.expected.txt  test_compound_assignment.ch  test_compound_assignment.expected.txt  test_cpp_block.ch  test_cpp_block.expected.txt  test_cpp_casts.ch  test_cpp_casts.expected.txt  test_data_types.ch  test_data_types.expected.txt  test_dynamic.ch  test_dynamic.expected.txt  test_enum.ch  (+67 more)
test/generators/: MagicGen.py
test/lib/: MyMath.h
